[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/MenuHeader.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/settings/SettingsOverlay.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/MainMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/online/OnlineMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/ui/Menu.gd" type="Script" id=5]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
script = ExtResource( 5 )

[node name="MainMenu" parent="." instance=ExtResource( 3 )]

[node name="OnlineMenu" parent="." instance=ExtResource( 4 )]
visible = false

[node name="MenuHeader" parent="." instance=ExtResource( 1 )]

[node name="SettingsOverlay" parent="." instance=ExtResource( 2 )]
visible = false
anchor_left = 0.6
anchor_top = 0.05
